--- a/api/v1/schemas/Tender.yaml
+++ b/api/v1/schemas/Tender.yaml
@@ -7,6 +7,7 @@ required:
   - price
   - is_contract_price
   - is_nds_price
+  - is_draft
   - floor_space
   - description
   - wishes
@@ -24,7 +25,7 @@ properties:
   name:
     type: string
   city:
-    type: string
+    $ref: "City.yaml"
   organization:
     $ref: "Organization.yaml"
   region:
@@ -34,6 +35,8 @@ properties:
   is_contract_price:
     type: boolean
   is_nds_price:
+    type: boolean
+  is_draft:
     type: boolean
   floor_space:
     type: integer
