--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -646,7 +646,9 @@ paths:
               type: object
               required:
                 - name
-                - region_id
+                - type
+                - phone
+                - question
               properties:
                 name:
                   type: string
