--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ tags-build:
 .prod-deploy:
   stage: deploy
   script:
-    - ssh -o StrictHostKeyChecking=no $REMOTE_USER@$REMOTE_HOST -p $REMOTE_PORT "docker service update --with-registry-auth --image $CI_REGISTRY_IMAGE:$IMAGE_TAG --force $SERVICE"
+    - ssh -o StrictHostKeyChecking=no $REMOTE_USER@$REMOTE_HOST -p $REMOTE_PORT "docker service update --with-registry-auth --image $CI_REGISTRY_IMAGE:$IMAGE_TAG $SERVICE"
 
 prod-deploy:
   only: [master]
