--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "amo-sync-proto"]
-	path = amo-sync-proto
-	url = git@gitlab.ubrato.ru:ubrato/amo-sync-proto.git
+[submodule "proto"]
+	path = proto
+	url = git@gitlab.ubrato.ru:ubrato/proto.git
