--- a/api/v1/properties/survey.yaml
+++ b/api/v1/properties/survey.yaml
@@ -1,5 +1,5 @@
 type: string
 enum:
-  - registration
-  - verification
-  - feedback
+  - SURVEY_TYPE_REGISTRATION
+  - SURVEY_TYPE_VERIFICATION
+  - SURVEY_TYPE_FEEDBACK
