--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -725,6 +725,237 @@ paths:
           description: Success
         default:
           $ref: '#/components/responses/Error'
+  /v1/admin/auth/signin:
+    post:
+      tags:
+        - admin
+      summary: Signin
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - password
+              properties:
+                email:
+                  $ref: '#/components/schemas/email'
+                password:
+                  $ref: '#/components/schemas/password'
+      responses:
+        '200':
+          description: Success
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
+                example: ubrato_admin_session=7ff581a1-4dcf-4f53-a9cb-0ef408d4a7bb; Path=/; Max-Age=1727209098; HttpOnly; Secure; SameSite=Lax
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - data
+                properties:
+                  data:
+                    type: object
+                    required:
+                      - user
+                      - access_token
+                    properties:
+                      user:
+                        $ref: '#/components/schemas/AdminUser'
+                      access_token:
+                        type: string
+        default:
+          $ref: '#/components/responses/Error'
+  /v1/admin/auth/user:
+    get:
+      tags:
+        - admin
+      summary: Get currently authenticated user
+      security:
+        - adminBearerAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - data
+                properties:
+                  data:
+                    type: object
+                    required:
+                      - user
+                    properties:
+                      user:
+                        $ref: '#/components/schemas/AdminUser'
+        default:
+          $ref: '#/components/responses/Error'
+  /v1/admin/auth/refresh:
+    post:
+      tags:
+        - admin
+      summary: Get new access token
+      parameters:
+        - name: ubrato_admin_session
+          in: cookie
+          required: true
+          description: The session ID for the user.
+          schema:
+            type: string
+      security:
+        - adminCookieAuth: []
+      responses:
+        '200':
+          description: Success
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
+                example: ubrato_admin_session=7ff581a1-4dcf-4f53-a9cb-0ef408d4a7bb; Path=/; Max-Age=1727209098; HttpOnly; Secure; SameSite=Lax
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - data
+                properties:
+                  data:
+                    type: object
+                    required:
+                      - user
+                      - access_token
+                    properties:
+                      user:
+                        $ref: '#/components/schemas/AdminUser'
+                      access_token:
+                        type: string
+        default:
+          $ref: '#/components/responses/Error'
+  /v1/admin/users:
+    get:
+      tags:
+        - admin
+      summary: Get admin users
+      security:
+        - adminBearerAuth: []
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - data
+                properties:
+                  data:
+                    type: object
+                    required:
+                      - users
+                    properties:
+                      users:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/AdminUser'
+        default:
+          $ref: '#/components/responses/Error'
+    post:
+      tags:
+        - admin
+      summary: Create admin user
+      security:
+        - adminBearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - phone
+                - password
+                - first_name
+                - last_name
+                - middle_name
+                - role
+              properties:
+                email:
+                  $ref: '#/components/schemas/email'
+                phone:
+                  $ref: '#/components/schemas/phone'
+                password:
+                  $ref: '#/components/schemas/password'
+                first_name:
+                  $ref: '#/components/schemas/name'
+                last_name:
+                  $ref: '#/components/schemas/name'
+                middle_name:
+                  $ref: '#/components/schemas/name'
+                avatar_url:
+                  $ref: '#/components/schemas/url'
+                role:
+                  $ref: '#/components/schemas/admin_role'
+      responses:
+        '201':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - data
+                properties:
+                  data:
+                    type: object
+                    required:
+                      - user
+                    properties:
+                      user:
+                        $ref: '#/components/schemas/AdminUser'
+        default:
+          $ref: '#/components/responses/Error'
+  /v1/admin/users/{userID}:
+    get:
+      tags:
+        - admin
+      summary: Get admin users by id
+      security:
+        - adminBearerAuth: []
+      parameters:
+        - name: userID
+          required: true
+          in: path
+          description: ID of user
+          schema:
+            type: integer
+            minimum: 1
+          example: 1
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - data
+                properties:
+                  data:
+                    type: object
+                    required:
+                      - user
+                    properties:
+                      user:
+                        $ref: '#/components/schemas/AdminUser'
+        default:
+          $ref: '#/components/responses/Error'
 components:
   securitySchemes:
     cookieAuth:
@@ -732,6 +963,14 @@ components:
       in: cookie
       name: ubrato_session
     bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+    adminCookieAuth:
+      type: apiKey
+      in: cookie
+      name: ubrato_admin_session
+    adminBearerAuth:
       type: http
       scheme: bearer
       bearerFormat: JWT
@@ -786,11 +1025,9 @@ components:
       type: integer
       enum:
         - 1
-        - 2
       description: |
         0: Invalid
         1: User
-        2: Admin
     inn:
       type: string
       pattern: ^\d{10,12}$
@@ -1067,6 +1304,50 @@ components:
         - SURVEY_TYPE_REGISTRATION
         - SURVEY_TYPE_VERIFICATION
         - SURVEY_TYPE_FEEDBACK
+    admin_role:
+      type: integer
+      enum:
+        - 1
+      description: |
+        0: Invalid
+        1: Employee
+        2: Admin
+        3: SuperAdmin
+    AdminUser:
+      type: object
+      required:
+        - id
+        - email
+        - phone
+        - first_name
+        - last_name
+        - middle_name
+        - role
+        - created_at
+        - updated_at
+      properties:
+        id:
+          type: integer
+        email:
+          $ref: '#/components/schemas/email'
+        phone:
+          $ref: '#/components/schemas/phone'
+        first_name:
+          $ref: '#/components/schemas/name'
+        last_name:
+          $ref: '#/components/schemas/name'
+        middle_name:
+          $ref: '#/components/schemas/name'
+        avatar_url:
+          $ref: '#/components/schemas/url'
+        role:
+          $ref: '#/components/schemas/admin_role'
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
   responses:
     Error:
       description: Error
