--- a/api/v1/paths/catalog/regions.yaml
+++ b/api/v1/paths/catalog/regions.yaml
@@ -5,7 +5,7 @@ post:
   description: |-
     Adds region to catalog
 
-    **[Role](https://wiki.ubrato.ru/books/arxitektura/page/roles-permissions) required**:
+    **[Role](https://youtrack.ubrato.ru/articles/UBR-A-7/Roli-privilegii) required**:
     'Admin' or higher.
   security:
     - bearerAuth: []
