--- a/api/v1/paths/survey/_index.yaml
+++ b/api/v1/paths/survey/_index.yaml
@@ -1,7 +1,7 @@
 post:
   tags:
     - survey
-  summary: Response to survey
+  summary: Respond to a survey
   security:
   - {}
   - bearerAuth: []
