--- a/api/v1/paths/tenders/_id/respond.yaml
+++ b/api/v1/paths/tenders/_id/respond.yaml
@@ -1,9 +1,8 @@
 post:
   tags:
     - tenders
-  summary: Send comment for tender
-  description: |-
-    Leaves comment under tender
+  summary: Respond to a tender
+  description: Responds to a tender
   security:
     - bearerAuth: []
   parameters:
