--- a/api/v1/paths/users/_id/_index.yaml
+++ b/api/v1/paths/users/_id/_index.yaml
@@ -5,7 +5,7 @@ get:
   description: |-
     Returns user by id
 
-    **[Role](https://wiki.ubrato.ru/books/arxitektura/page/roles-permissions) required**:
+    **[Role](https://youtrack.ubrato.ru/articles/UBR-A-7/Roli-privilegii) required**:
     'Employee' or higher.
   security:
     - bearerAuth: []
