--- a/api/v1/paths/tenders/_index.yaml
+++ b/api/v1/paths/tenders/_index.yaml
@@ -6,7 +6,7 @@ get:
     Returns all tenders
 
     Для получения всех тендеров (включая неверифицированные)
-    **[Role](https://wiki.ubrato.ru/books/arxitektura/page/roles-permissions) required**:
+    **[Role](https://youtrack.ubrato.ru/articles/UBR-A-7/Roli-privilegii) required**:
     'Employee' or higher.
   security:
     - bearerAuth: []
